--- a/4 Dark theme/index.html
+++ b/4 Dark theme/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <div id="toggle">
+        <i class="indicator"></i>
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
