--- a/6 OnMouseOver/index.html
+++ b/6 OnMouseOver/index.html
@@ -9,9 +9,9 @@
 <body>
     <div class="container">
         <ul class="thum">
-            <li><img src="./img/shoes1.png" alt=""></li>
-            <li><img src="./img/shoes2.png" alt=""></li>
-            <li><img src="./img/shoes3.png" alt=""></li>
+            <li onmouseover="imgURL('./img/shoes1.png')"><img src="./img/shoes1.png" alt=""></li>
+            <li onmouseover="imgURL('./img/shoes2.png')"><img src="./img/shoes2.png" alt=""></li>
+            <li onmouseover="imgURL('./img/shoes3.png')"><img src="./img/shoes3.png" alt=""></li>
         </ul>
         <div class="imgBox">
             <h2>Nike Air Zoom</h2>
