--- a/7 Cambio de color/index.html
+++ b/7 Cambio de color/index.html
@@ -5,27 +5,27 @@
     <link rel="stylesheet" type="text/css" href="./css/style.css">
   </head>
   <body>
-    <div class="menuToggle"></div>
+    <div class="menuToggle" onclick="Togglemenu()"></div>
     <div class="navigation">
       <div class="navArea">
         <ul>
           <li>
-            <a href="#"">Home</a>
+            <a onmouseover="imgSlider('./images/img1.jpg')" href="#"">Home</a>
           </li>
           <li>
-            <a href="#">About</a>
+            <a onmouseover="imgSlider('./images/img2.jpg')" href="#">About</a>
           </li>
           <li>
-            <a href="#">Services</a>
+            <a onmouseover="imgSlider('./images/img3.jpg')" href="#">Services</a>
           </li>
           <li>
-            <a href="#">Portfolio</a>
+            <a onmouseover="imgSlider('./images/img4.jpg')" href="#">Portfolio</a>
           </li>
           <li>
-            <a href="#">Team</a>
+            <a onmouseover="imgSlider('./images/img5.jpg')" href="#">Team</a>
           </li>
           <li>
-            <a href="#">Contact</a>
+            <a onmouseover="imgSlider('./images/img6.jpg')" href="#">Contact</a>
           </li>
         </ul>
       </div>
