--- a/8 Slider video/index.html
+++ b/8 Slider video/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section>
-        <div class="bannerVideo" id="sliderShow">
+        <div class="banner-video" id="slider-show">
             <video src="./img/video1.mp4" autoplay muted loop class="active"></video>
             <video src="./img/video2.mp4" autoplay muted loop></video>
             <video src="./img/video3.mp4" autoplay muted loop></video>
