Repaso maquetacion, estilos y javascript inicial

--- a/8 Slider video/index.html
+++ b/8 Slider video/index.html
@@ -23,10 +23,10 @@
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
-                <span class="menu-icon"></span>
+                <span class="menu-icon" onclick="ToggleMenu()"></span>
             </header>
             <div class="content">
-                <div class="banner-text" id="slide-show-text">
+                <div class="banner-text" id="slider-show-text">
                     <div class="active">
                         <h2>Tokyo</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate tempore ut voluptas magni, ipsum alias libero omnis expedita voluptatem, fugiat, ipsa eligendi! Soluta, ipsum porro quasi corporis enim autem accusantium.
