--- a/8 Slider video/index.html
+++ b/8 Slider video/index.html
@@ -50,8 +50,8 @@
                 </div>
             </div>
             <ul class="controls">
-                <li><img src="./img/left.png" alt=""></li>
-                <li><img src="./img/right.png" alt=""></li>
+                <li><img src="./img/left.png" alt="" onclick="prevSlider()"></li>
+                <li><img src="./img/right.png" alt="" onclick="nextSlider()"></li>
             </ul>
         </div>
     </section>
