--- a/11 Parallax efect/index.html
+++ b/11 Parallax efect/index.html
@@ -15,17 +15,17 @@
                     <span data-depth-y="-6">o</span>
                     <span data-depth-y="5">d</span>
                     <span data-depth-y="2">i</span>
-                    <span>g</span>
-                    <span>o</span>
-                    <span>369</span>
+                    <span data-depth-y="-8">g</span>
+                    <span data-depth-y="-3">o</span>
+                    <span data-depth-y="6">369</span>
                 </h2>
-                <div><img src="./img/img1.png" alt=""></div>
-                <div><img src="./img/img2.png" alt=""></div>
-                <div><img src="./img/img3.png" alt=""></div>
-                <div><img src="./img/img4.png" alt=""></div>
-                <div><img src="./img/img5.png" alt=""></div>
-                <div><img src="./img/img6.png" alt=""></div>
-                <div><img src="./img/img7.png" alt=""></div>
+                <div class="layer z" data-depth="-0.5"><img src="./img/img1.png" alt=""></div>
+                <div class="layer z" data-depth="0.75"><img src="./img/img2.png" alt=""></div>
+                <div class="layer z" data-depth="1"><img src="./img/img3.png" alt=""></div>
+                <div class="layer" data-depth="-0.25"><img src="./img/img4.png" alt=""></div>
+                <div class="layer" data-depth="0.625"><img src="./img/img5.png" alt=""></div>
+                <div class="layer" data-depth="-0.375"><img src="./img/img6.png" alt=""></div>
+                <div class="layer z" data-depth="0.5"><img src="./img/img7.png" alt=""></div>
             </div>
         </div>
     </section>
