--- a/13 Page dragon ball/index.html
+++ b/13 Page dragon ball/index.html
@@ -51,6 +51,7 @@
        <div class="sphere element"></div>
      </div>
    </div>
+
     <main>
         <section>
             <img src="./img/fondo.jpg" id="bg" alt="">
@@ -75,6 +76,7 @@
             </div>
         </div>
     </main>
+    <div id="lastray" class="element"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/ScrollTrigger.min.js"></script>
     <script src="./script.js"></script>
