Ajustes de maquetacion, imagenes y estilos

--- a/16 Halloween Page/index.html
+++ b/16 Halloween Page/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Halloween Page</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
+    <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
   <body>
     <!-- #region ENCABEZADO -->
@@ -18,7 +23,7 @@
           />
           Haloween
         </a>
-        <div class="nav-menu">
+        <div class="nav__menu" id="nav-menu">
           <ul class="nav__list">
             <li class="nav__item">
               <a href="#home" class="nav__link active-link">Home</a>
@@ -55,7 +60,7 @@
             <section class="swiper-slide">
               <div class="home__content grid">
                 <div class="home__group">
-                  <img src="./assets/img/i1.png" alt="" class="home__img" />
+                  <img src="./assets/img/footer2-img.png" alt="" class="home__img" />
                   <div class="home__indicator"></div>
 
                   <div class="home__details-img">
