Elementos swiper y scroll-up, revison general

--- a/16 Halloween Page/index.html
+++ b/16 Halloween Page/index.html
@@ -179,6 +179,7 @@
               </div>
             </section>
           </div>
+          <div class="swiper-pagination"></div>
         </div>
       </section>
 
