Final estilos y javascript (setTimeout)

--- a/18 Loader coffee/index.html
+++ b/18 Loader coffee/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- cargador pagaina principal -->
-    <div class="loading-wrap">
+    <div class="loading-wrap" id="loading">
         <div class="inner">
             <div class="fill"></div>
         </div>
