Fin maquetacion main section

--- a/20 Sidebar/index.html
+++ b/20 Sidebar/index.html
@@ -27,7 +27,7 @@
         <nav class="nav__container">
             <div>
                 <a href="#" class="nav__link nav-logo">
-                    <i class='bx bx-disc'></i>
+                    <i class='bx bxs-disc'></i>
                     <span class="nav__logo-name">Codigo360</span>
                 </a>
                 <div class="nav__list">
@@ -89,6 +89,14 @@
             </a>
         </nav>
     </div>
+    <!--CONTENIDO-->
+    <main class="main">
+        <section class="section">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos inventore nulla praesentium aperiam facere iusto quas, temporibus sapiente doloremque similique accusamus itaque autem sint consequatur vero fugit libero molestiae tempora!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos inventore nulla praesentium aperiam facere iusto quas, temporibus sapiente doloremque similique accusamus itaque autem sint consequatur vero fugit libero molestiae tempora!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos inventore nulla praesentium aperiam facere iusto quas, temporibus sapiente doloremque similique accusamus itaque autem sint consequatur vero fugit libero molestiae tempora!</p>
+        </section>
+    </main>
 
 
 
