Fin estilos header

--- a/20 Sidebar/index.html
+++ b/20 Sidebar/index.html
@@ -11,7 +11,7 @@
 <body>
     <!--HEADER-->
     <header class="header">
-        <div class="headder__container">
+        <div class="header__container">
             <img src="./assets/img/avatar.jpg" alt="imagen avatar" class="header__img">
             <div class="header__search">
                 <input type="search" placeholder="Buscar..." class="header__input">
