--- a/20 Sidebar/index.html
+++ b/20 Sidebar/index.html
@@ -26,7 +26,7 @@
     <div class="nav" id="nav">
         <nav class="nav__container">
             <div>
-                <a href="#" class="nav__link nav-logo">
+                <a href="#" class="nav__link nav__logo">
                     <i class='bx bxs-disc'></i>
                     <span class="nav__logo-name">Codigo360</span>
                 </a>
@@ -57,7 +57,7 @@
                         </a>
                     </div>
                     <div class="nav__items">
-                        <h3>Menu</h3>
+                        <h3 class="nav__subtitle">Menu</h3>
                         <div class="nav__dropdown">
                             <a href="" class="nav__link">
                                 <i class='bx bx-bell'></i>
