--- a/20 Sidebar/index.html
+++ b/20 Sidebar/index.html
@@ -18,12 +18,12 @@
                 <i class='bx bx-search'></i>
             </div>
             <div class="header__toggle">
-                <i class='bx bx-menu'></i>
+                <i class='bx bx-menu' id="header-toggle"></i>
             </div>
         </div>
     </header>
     <!--NAV-->
-    <div class="nav" id="nav">
+    <div class="nav" id="navbar">
         <nav class="nav__container">
             <div>
                 <a href="#" class="nav__link nav__logo">
@@ -38,7 +38,7 @@
                             <span class="nav__name">Home</span>
                         </a>
                         <div class="nav__dropdown">
-                            <a href="" class="nav__link">
+                            <a href="#" class="nav__link">
                                 <i class='bx bx-user nav__icon'></i>
                                 <span class="nav__name">Profile</span>
                                 <i class='bx bx-chevron-down nav__icon nav__dropdown-icon'></i>
@@ -51,7 +51,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="" class="nav__link">
+                        <a href="#" class="nav__link">
                             <i class='bx bx-message-rounded'></i>
                             <span class="nav__name">Message</span>
                         </a>
@@ -59,7 +59,7 @@
                     <div class="nav__items">
                         <h3 class="nav__subtitle">Menu</h3>
                         <div class="nav__dropdown">
-                            <a href="" class="nav__link">
+                            <a href="#" class="nav__link">
                                 <i class='bx bx-bell'></i>
                                 <span class="nav__name">Notifications</span>
                                 <i class='bx bx-chevron-down nav__icon nav__dropdown-icon'></i>
@@ -72,18 +72,18 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="" class="nav__link ">
+                        <a href="#" class="nav__link ">
                             <i class='bx bx-compass nav__icon'></i>
                             <span class="nav__name">Explore</span>
                         </a>
-                        <a href="" class="nav__link">
+                        <a href="#" class="nav__link">
                             <i class='bx bx-bookmark nav__icon'></i>
                             <span class="nav__name">Saved</span>
                         </a>
                     </div>
                 </div>
             </div>
-            <a href="" class="nav__link nav__logout">
+            <a href="#" class="nav__link nav__logout">
                 <i class='bx bx-log-out nav__icon'></i>
                 <span class="nav__name">Log Out</span>
             </a>
